# nasrine_seraji

./: .gitignore  .pre-commit-config.yaml  Property-Friends-basic-model.ipynb  README.md  pyproject.toml
.github/workflows/: ci.yml
api/: .env.template  pyproject.toml
api/property_friends_api/: main.py
api/property_friends_api/middleware/: auth.py
api/property_friends_api/routers/: predictions.py
api/property_friends_api/schemas/: request.py  response.py
data/models/: model.joblib  preprocessor.joblib
docker/: Dockerfile  Dockerfile.api  Dockerfile.pipe  docker-compose.api.yml  docker-compose.dev.yml  docker-compose.yml
property_friends/: __init__.py  pyproject.toml
property_friends/data_input/: filesystem.py
property_friends/models/: __init__.py  model.py
property_friends/property_friends/: __init__.py
property_friends/property_friends/data_input/: __init__.py  base.py  factory.py  filesystem.py
property_friends/property_friends/models/: prediction.py  training.py
property_friends/scripts/: train_and_serialize_model.py
property_friends/src/models/: __init__.py  model.py  prediction.py  training.py
property_friends/tests/: test_data_input_filesystem.py  test_model.py  test_prediction.py  test_training.py
tests/: test_data_input_filesystem.py  test_model.py
training_pipeline/: pyproject.toml
training_pipeline/src/training_pipeline/defs/: assets.py
