[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "property-friends"
version = "0.1.0"
description = "A property valuation predictor"
authors = [{name = "Jean-Marc Montanier", email = "montanier.jeanmarc@gmail.com"}]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "category-encoders>=2.5.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.900",
]

[project.urls]
Homepage = "https://github.com/yourusername/property-friends"
Repository = "https://github.com/yourusername/property-friends"

[tool.setuptools.packages.find]
where = ["."]
include = ["property_friends*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
