[project]
name = "training_pipeline"
requires-python = ">=3.11"
version = "0.1.0"
dependencies = [
    "dagster==1.11.2",
    "property-friends",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
property-friends = { path = "../property_friends/dist/property_friends-0.1.1-py3-none-any.whl" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "training_pipeline"
registry_modules = [
    "training_pipeline.components.*",
]


